[project]
name = "pal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "absl-py>=2.1.0",
    "astunparse>=1.6.3",
    "attrs>=25.3.0",
    "blinker>=1.9.0",
    "brax>=0.12.1",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "chex>=0.1.89",
    "click>=8.1.8",
    "cloudpickle>=3.1.1",
    "contourpy>=1.3.1",
    "cycler>=0.12.1",
    "cython>=3.0.12",
    "dm-env>=1.6",
    "dm-tree>=0.1.9",
    "etils>=1.12.2",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flatbuffers>=25.2.10",
    "flax>=0.10.4",
    "fonttools>=4.56.0",
    "fsspec>=2025.3.0",
    "gast>=0.6.0",
    "glfw>=2.8.0",
    "google-pasta>=0.2.0",
    "grpcio>=1.71.0",
    "gym>=0.26.2",
    "gym-notices>=0.0.8",
    "h5py>=3.13.0",
    "humanize>=4.12.1",
    "idna>=3.10",
    "importlib-resources>=6.5.2",
    "itsdangerous>=2.2.0",
    "jax>=0.5.3",
    "jax-cuda12-pjrt>=0.5.3",
    "jax-cuda12-plugin>=0.5.3",
    "jaxlib>=0.5.3",
    "jaxopt>=0.8.3",
    "jinja2>=3.1.6",
    "keras>=3.9.0",
    "kiwisolver>=1.4.8",
    "libclang>=18.1.1",
    "markdown>=3.7",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.1",
    "mdurl>=0.1.2",
    "ml-collections>=1.0.0",
    "ml-dtypes>=0.5.1",
    "msgpack>=1.1.0",
    "mujoco>=3.3.0",
    "mujoco-mjx>=3.3.0",
    "namex>=0.0.8",
    "nest-asyncio>=1.6.0",
    "numpy>=2.1.3",
    "nvidia-cublas-cu12>=12.8.4.1",
    "nvidia-cuda-cupti-cu12>=12.8.90",
    "nvidia-cuda-nvcc-cu12>=12.8.93",
    "nvidia-cuda-nvrtc-cu12>=12.5.82",
    "nvidia-cuda-runtime-cu12>=12.8.90",
    "nvidia-cudnn-cu12>=9.8.0.87",
    "nvidia-cufft-cu12>=11.3.3.83",
    "nvidia-curand-cu12>=10.3.6.82",
    "nvidia-cusolver-cu12>=11.7.3.90",
    "nvidia-cusparse-cu12>=12.5.8.93",
    "nvidia-nccl-cu12>=2.26.2",
    "nvidia-nvjitlink-cu12>=12.8.93",
    "opt-einsum>=3.4.0",
    "optax>=0.2.4",
    "optree>=0.14.1",
    "orbax-checkpoint>=0.11.9",
    "packaging>=24.2",
    "patchelf>=0.17.2.2",
    "pillow>=11.1.0",
    "protobuf>=5.29.4",
    "pygments>=2.19.1",
    "pyopengl>=3.1.9",
    "pyparsing>=3.2.1",
    "python-dateutil>=2.9.0.post0",
    "pytinyrenderer>=0.0.14",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "scipy>=1.15.2",
    "setuptools>=76.1.0",
    "simplejson>=3.20.1",
    "six>=1.17.0",
    "tensorboard>=2.19.0",
    "tensorboard-data-server>=0.7.2",
    "tensorboardx>=2.6.2.2",
    "tensorflow>=2.19.0",
    "tensorstore>=0.1.72",
    "termcolor>=2.5.0",
    "toolz>=1.0.0",
    "treescope>=0.1.9",
    "trimesh>=4.6.4",
    "typing-extensions>=4.12.2",
    "urllib3>=2.3.0",
    "werkzeug>=3.1.3",
    "wheel>=0.45.1",
    "wrapt>=1.17.2",
    "zipp>=3.21.0",
]
